# promptify-concrete-tracker

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_rename_metadata_column.py
app/: main.py
app/core/: auth.py  config.py  seed.py
app/domain/: defaults.py  models.py
app/pages/: 01_playground.py  02_batch_eval.py  03_configs.py  04_datasets.py
app/providers/: azure_di_gpt.py  base.py  mistral.py  registry.py
app/repos/: cache.py  configs.py  datasets.py  db.py  runs.py
app/services/: blob.py  compare.py  eval.py  normalize.py  runner.py
data/seed/BatchTest/: Tests.xlsx
docker/: Dockerfile
scripts/: deploy.sh  entrypoint.sh
tests/: test_compare_field.py  test_normalize.py
