[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "promptify-concrete-tracker"
version = "0.1.0"
description = "Prompt-engineering lab for concrete delivery note OCR"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "azure-storage-blob>=12.22",
    "azure-ai-documentintelligence>=1.0.0",
    "openai>=1.55",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pdf2image>=1.17",
    "python-dateutil>=2.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
